--- a/index.html
+++ b/index.html
@@ -40,11 +40,19 @@
     <section class="container">
       <section>
         <div>
-          <i class="fa-solid fa-bars hamburger-menu icon-button" onclick="openNav()"></i>
-          <i class="fa-solid fa-magnifying-glass icon-button" onclick="openSearchBox()"></i>
+          <i
+            class="fa-solid fa-bars hamburger-menu icon-button"
+            onclick="openNav()"
+          ></i>
+          <i
+            class="fa-solid fa-magnifying-glass icon-button"
+            onclick="openSearchBox()"
+          ></i>
           <span id="input-area">
-            <input type="text" id="search-input" placeholder="search"/>
-            <button class="search-button" onclick="getNewsByKeyword()">Go</button>
+            <input type="text" id="search-input" placeholder="search" />
+            <button class="search-button" onclick="getNewsByKeyword()">
+              Go
+            </button>
           </span>
         </div>
         <div class="head-line">
@@ -92,6 +100,7 @@
       </section>
     </section>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/moment.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
       integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
