9강까지 완료

--- a/index.html
+++ b/index.html
@@ -20,21 +20,13 @@
     <div class="side-menu" id="mySidenav">
       <button class="closebtn" onclick="closeNav()">&times;</button>
       <div class="side-menu-list" id="menu-list">
-        <button>Sport</button>
-        <button>Tech</button>
-        <button>World</button>
-        <button>Finance</button>
-        <button>Politics</button>
-        <button>Business</button>
-        <button>Economics</button>
-        <button>Entertainment</button>
-        <button>Beauty</button>
-        <button>Travel</button>
-        <button>Music</button>
-        <button>Food</button>
-        <button>Science</button>
-        <button>Gaming</button>
-        <button>Energy</button>
+          <button>Business</button>
+          <button>Entertainment</button>
+          <button>General</button>
+          <button>Health</button>
+          <button>Science</button>
+          <button>Sport</button>
+          <button>Technology</button>
       </div>
     </div>
     <section class="container">
@@ -63,21 +55,13 @@
           </svg>
         </div>
         <div class="menus">
-          <button>Sport</button>
-          <button>Tech</button>
-          <button>World</button>
-          <button>Finance</button>
-          <button>Politics</button>
           <button>Business</button>
-          <button>Economics</button>
           <button>Entertainment</button>
-          <button>Beauty</button>
-          <button>Travel</button>
-          <button>Music</button>
-          <button>Food</button>
+          <button>General</button>
+          <button>Health</button>
           <button>Science</button>
-          <button>Gaming</button>
-          <button>Energy</button>
+          <button>Sport</button>
+          <button>Technology</button>
         </div>
       </section>
       <section id="news-board">
