--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <div class="side-menu" id="mySidenav">
       <button class="closebtn" onclick="closeNav()">&times;</button>
       <div class="side-menu-list" id="menu-list">
-          <button>Business</button>
-          <button>Entertainment</button>
-          <button>General</button>
-          <button>Health</button>
-          <button>Science</button>
-          <button>Sport</button>
-          <button>Technology</button>
+        <button>Business</button>
+        <button>Entertainment</button>
+        <button>General</button>
+        <button>Health</button>
+        <button>Science</button>
+        <button>Sport</button>
+        <button>Technology</button>
       </div>
     </div>
     <section class="container">
@@ -83,8 +83,12 @@
         </div>
       </section>
     </section>
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
 
-    
+      </ul>
+    </nav>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
       integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
