17강 도전과제까지

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
       </section>
     </section>
-    <nav aria-label="Page navigation example">
+    <nav aria-label="Page navigation example" class="footer-pagination">
       <ul class="pagination">
 
       </ul>
