모바일 버전에서 사이드 카테고리 함수 연결+사이드 카테고리가 있을 시, 그냥 카테고리는 지워주기

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button>General</button>
         <button>Health</button>
         <button>Science</button>
-        <button>Sport</button>
+        <button>Sports</button>
         <button>Technology</button>
       </div>
     </div>
@@ -60,7 +60,7 @@
           <button>General</button>
           <button>Health</button>
           <button>Science</button>
-          <button>Sport</button>
+          <button>Sports</button>
           <button>Technology</button>
         </div>
       </section>
